--- a/_config.yml
+++ b/_config.yml
@@ -1,26 +1,17 @@
 # ---------------- #
 #   Main Configs   #
 # ---------------- #
-baseurl:
-url: http://mazhuang.org
+baseurl:m
+url: http://bfmoka.tk
 date_format: "ordinal"
-title: 码志
-subtitle: "打码改变人生"
-description: "马壮的个人博客"
-keywords: 码志, Zhuang Ma, mzlogin, mazhuang
+title: 北方摩卡
+subtitle: "春风十里，不如你"
+description: "北方摩卡"
+keywords: 北方摩卡
 favicon: /favicon.ico
 timezone: Asia/Shanghai
 encoding: "utf-8"
 side_bar_repo_limit: 5
-
-# ---------------- #
-#      Author      #
-# ---------------- #
-author: Zhuang Ma
-organization: Sogou, Inc.
-organization_url: https://www.sogou.com
-location: Beijing, China
-email: chumpma@gmail.com
 
 # ---------------- #
 #    Navigation    #
@@ -34,10 +25,7 @@ navs:
     href: /categories/
     label: 分类
 
-  -
-    href: /wiki/
-    label: 维基
-
+ 
   -
     href: /links/
     label: 链接
@@ -77,17 +65,7 @@ collections:
         output: true
         permalink: /wiki/:path/
 
-repository: mzlogin/mzlogin.github.io
-
-# ---------------- #
-#      Socials     #
-# ---------------- #
-github_username: mzlogin
-douban_username: freedim
-facebook_username: mzlogin
-weibo_username: mzlogin
-zhihu_username: mzlogin
-twitter_username: mzlogin
+repository: bfmoka/bfmoka.github.io
 
 # ---------------- #
 #      Comments    #
@@ -96,8 +74,8 @@ twitter_username: mzlogin
 comments_provider: disqus
 # !!!重要!!! 请修改下面两个用户名为你自己申请的
 # !!!Important!!! Please modify usernames below to yours
-duoshuo_username: mazhuang
-disqus_username: mzlogin
+duoshuo_username: bfmoka
+disqus_username: bfmoka
 # 在使用 disqus 的时候可点击显示多说评论框
 lazy_load_duoshuo: true
 
