--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,12 @@
 #   Main Configs   #
 # ---------------- #
 baseurl:
-url: http://mazhuang.org
+url: http://bfmoka.tk
 date_format: "ordinal"
-title: 码志
-subtitle: "打码改变人生"
-description: "马壮的个人博客"
-keywords: 码志, Zhuang Ma, mzlogin, mazhuang
+title: 北方摩卡
+subtitle: "春风十里不如你"
+description: "北方摩卡"
+keywords: 北方摩卡
 favicon: /favicon.ico
 timezone: Asia/Shanghai
 encoding: "utf-8"
