--- a/_config.yml
+++ b/_config.yml
@@ -55,17 +55,7 @@ collections:
         output: true
         permalink: /wiki/:path/
 
-repository: mzlogin/mzlogin.github.io
-
-# ---------------- #
-#      Socials     #
-# ---------------- #
-github_username: mzlogin
-douban_username: freedim
-facebook_username: mzlogin
-weibo_username: mzlogin
-zhihu_username: mzlogin
-twitter_username: mzlogin
+repository: bfmoka/bfmoka.github.io
 
 # ---------------- #
 #      Comments    #
@@ -75,7 +65,7 @@ comments_provider: disqus
 # !!!重要!!! 请修改下面两个用户名为你自己申请的
 # !!!Important!!! Please modify usernames below to yours
 duoshuo_username: mazhuang
-disqus_username: mzlogin
+disqus_username: bfmoka
 # 在使用 disqus 的时候可点击显示多说评论框
 lazy_load_duoshuo: true
 
